# ffmpeg-dll-export

./: CMakeLists.txt  README.md
include/: ffmpeg.h
script/: build.py
src/: CMakeLists.txt  ffmpeg.cpp
src/ffmpeg-shared-build/lib/pkgconfig/: libavcodec.pc  libavdevice.pc  libavfilter.pc  libavformat.pc  libavutil.pc  libswresample.pc  libswscale.pc
src/ffmpeg-static-build/lib/pkgconfig/: libavcodec.pc  libavdevice.pc  libavfilter.pc  libavformat.pc  libavutil.pc  libswresample.pc  libswscale.pc
